# aae59maac

./: README.md
project/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
project/configs/: ppo_default.yaml  ppo_m2_er.yaml  ppo_m2_er_perturb.yaml  ppo_m2_er_tight.yaml  ppo_m3a_v2.yaml  ppo_m3a_v3.yaml  ppo_m3c.yaml  ppo_m3c_v2.yaml  ppo_m3c_v3.yaml
project/info/: final_report_alignment_review.md
project/info/AAE59MAAC_Final_Report/: FinalReport.tex  README.md  Reference.bib  presentation_qna.md
project/info/AAE59MAAC_Project_Proposal/: main.tex
project/info/Resources/: course project info from syllabus.txt
project/info/final_report_drafts/: README.md  additional_refs.bib  key_idea.tex  sdp_theorem.tex
project/results/geom/: manifest.json
project/results/m1/: manifest.json  summary.csv
project/results/m2/: eval.csv
project/results/m2_er_ms/: eval_agg.csv  sdp.json
project/results/m2_er_tight/: eval_agg.csv  sdp.json
project/results/m3/: manifest.json  robustness.csv
project/results/m3a/: eval.csv  manifest.json
project/results/m3a_v2/: eval.csv  manifest.json
project/results/m3a_v3/: eval.csv  manifest.json
project/results/m3b_clean/: manifest.json  robustness.csv
project/scripts/: m1_baseline.py  m2_eval_multiseed.py  m2_eval_reweight.py  m2_sdp_bound.py  m2_train_reweight.py  m3_geometric.py  m3_robustness.py  m3_train_rewire.py  m3a_eval_rewire.py  m3c_eval_geometric.py  m3c_train_geometric.py  run_multiseed.py
project/tests/: test_baselines.py  test_consensus.py  test_envs.py  test_graphs.py  test_reward.py
(+131 files in other folders)
