[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectralrl"
version = "0.1.0"
description = "Reinforcement Learning for Spectral Gap Optimization in Multi-Agent Networks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shrikrishna Rajule" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "torch>=2.2",
    "torchrl>=0.4",
    "tensordict>=0.4",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-xdist", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
